--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div style="text-align: center;background: #3D3D3D"><a href="https://www.linkedin.com/in/ofer-tovy-b34aa5128" style="background: #3D3D3D; color: lightgray";>Click Here For My LinkedIn Page :)</a></div>    
 <div class="flex-container">
     <div class="float-child" id="selectors">
 
