--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div><a href="https://www.linkedin.com/in/ofer-tovy-b34aa5128">Click Here To Visit My LinkedIn Profile :)</a></div>    
+<div id="topDiv"><a id="topA" href="https://www.linkedin.com/in/ofer-tovy-b34aa5128">Click Here To Visit My LinkedIn Profile :)</a></div>    
 <div class="flex-container">
     <div class="float-child" id="selectors">
 
