--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="topDiv"><a id="topA" href="https://www.linkedin.com/in/ofer-tovy-b34aa5128">Click Here To Visit My LinkedIn Profile :)</a></div>    
 <div class="flex-container">
-    <div class="float-child" id="selectors">
+    <div id="selectors">
 
         <div id="footer-buttons">
             <button class="footer-buttons" type="submit" id="submit">Generate ERD</button>
