--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div id="selectors">
 
         <div id="footer-buttons">
-            <button class="footer-buttons" type="submit" id="submit">Generate ERD</button>
+            <button type="submit" id="submit">Generate ERD</button>
             <div id="save-buttons">
                 <a id="download" href="#" download><button id="downloadButton">Download<br>Config File</button></a>
                 <a id="upload" href="#"><button id="uploadButton">Upload<br>Config File</button></a>
                 <button id="downloadImgButton">Download<br>Image</button>
             </div>
             <div id="side-buttons">
-                <button class='footer-buttons' id="plus_more_tables">Add Table</button>
-                <button class='footer-buttons' id="clear_all_tables">Clear All Tables</button>
+                <button id="plus_more_tables">Add Table</button>
+                <button id="clear_all_tables">Clear All Tables</button>
             </div>
         </div>
 
